@@ -697,6 +697,11 @@ a.iconbutton.threadmode.selected {
 	background: linear-gradient(top, #fff 0%, #e9e9e9 100%);
 }
 
+#mailview-right #messageheader {
+	border-radius: 4px 4px 0 0;
+	border-bottom: 2px solid #e6e6e6;
+}
+
 h2.subject {
 	font-size: 15px;
 	margin: 0 15em 0 0;
@@ -801,9 +806,17 @@ h3.subject {
 	background-position: -5px -242px;
 }
 
+#full-headers {
+	position: relative;
+}
+
 div.more-headers {
-	cursor: pointer;
+	position: absolute;
+	top: -12px;
+	right: 10px;
+	width: 12px;
 	height: 10px;
+	cursor: pointer;
 	background: url(images/buttons.png) center -1619px no-repeat;
 }
 
@@ -812,13 +825,13 @@ div.hide-headers {
 }
 
 #all-headers {
-    position: relative;
-	margin: 0 10px;
+	position: relative;
+	margin: 4px 10px;
 	padding: 0;
 	height: 180px;
-	border: 1px solid #bbb;
+	border: 1px solid #ccc;
 	border-radius: 4px;
-	background: #fff;
+	background: #fdfdfd;
 }
 
 #headers-source {
@@ -828,10 +841,14 @@ div.hide-headers {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	padding: 2px 5px;
+	padding: 3px 5px;
 	overflow: auto;
 	text-align: left;
 	color: #333;
+}
+
+#messagepreviewheader #all-headers {
+	margin-left: 0;
 }
 
 #messagepreviewheader {
