@@ -31,10 +31,9 @@
 
 </div>
 
-<div id="mailview-right">
+<div id="mailview-right" class="offset uibox">
 
-<div id="mailview-top">
-<div id="messageheader" class="uibox">
+<div id="messageheader">
 <h2 class="subject"><roundcube:object name="messageHeaders" valueOf="subject" /></h2>
 <roundcube:object name="messageHeaders" class="headers-table" addicon="/images/addcontact.png" exclude="subject" />
 <roundcube:object name="messageFullHeaders" id="full-headers" />
@@ -46,9 +45,10 @@
 	<roundcube:button command="nextmessage" type="link" class="button nextpage disabled" classAct="button nextpage" classSel="button nextpage pressed" innerClass="inner" title="nextmessage" content="&amp;gt;" />
 </div>
 
+<div id="contactphoto"><roundcube:object name="contactphoto" /></div>
 </div>
 
-<div id="messagecontent" class="uibox">
+<div id="messagecontent">
 <div class="rightcol">
 <roundcube:object name="messageAttachments" id="attachment-list" class="attachmentslist" />
 </div>
@@ -58,11 +58,7 @@
 </div>
 </div>
 
-</div><!-- end mailview-top -->
-
-<div id="mailview-bottom" class="uibox">
 <roundcube:object name="message" id="message" class="statusbar" />
-</div>
 
 </div><!-- end mailview-right -->
 
